Divide deployments instead of using full-deployment.yaml